--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,18 @@ on:
 
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
-      - name: test
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Use node 18.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.X
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint
         run: npm run test
